--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: M4, Group 3
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, we are Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho</h1>
+	<p>Blablabla...</a></p>
 </div><!-- /.blurb -->
