--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: M4, Group 3
+title: M4. Video Analysis, group 3
 ---
 <div class="blurb">
-	<h1>Hi there, we are Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho</h1>
-	<p>Blablabla...</a></p>
+	<h1>Video surveillance for road traffic monitoring</h1>
+	<p>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</a></p>
 </div><!-- /.blurb -->
