--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: M4. Video Analysis, group 3
 <div class="blurb">
 	<h1>Video surveillance for road traffic monitoring</h1>
 	<p>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</a></p>
+	<p>Please, feel free to read our blog.</a></p>
 </div><!-- /.blurb -->
