--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: M4. Video Analysis, group 3
+title: M4. Video Analysis
 ---
 <div class="blurb">
 	<h1>Video surveillance for road traffic monitoring</h1>
