--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: M4. Video Analysis
 ---
 <div class="blurb">
-	<h1>Video surveillance for road traffic monitoring</h1>
-	<p>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</a></p>
-	<p>Please, feel free to read our blog.</a></p>
+	<h1>Introduction</h1>
+	<p><a>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</a></p>
+	<h1>Title 1</h1>
+	<p><a> Road traffic detection and monitorization is [...] </a></p>
 </div><!-- /.blurb -->
