--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: M4. Video Analysis
 ---
 <div class="blurb">
 	<h1>Introduction</h1>
-	<p><a>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</a></p>
+	<p>Hi there, we are group 3: Alejandro Nespereira, Marc Carné, Axel Barroso and Sergio Sancho.</p>
 	<h1>Title 1</h1>
-	<p><a> Road traffic detection and monitorization is [...] </a></p>
+	<p>Road traffic detection and monitorization is [...] </p>
 </div><!-- /.blurb -->
